# flask_app_authentication_uuid

./: app.py  config.py  forms.py  models.py  pyproject.toml  requirements.txt  secret_keygen.py
app/: __init__.py  routes.py
app/auth/: forms.py  routes.py
app/auth/logic/: login_.py  request_reset.py  reset_token.py
app/main/: routes.py
app/registration/: __init__.py  forms.py  routes.py
app/registration/logic/: registration.py
app/static/holding/: logout.py
app/templates/: base.html  home.html
app/templates/auth/: login.html  password_reset.html  reset_request.html
app/templates/main/: home.html
static/css/: styles.css
templates/: account.html  home.html  login.html  profile.html  register.html  reset_request.html  reset_token.html
